fixed spacing between rows

--- a/src/app/home/_landing-page.scss
+++ b/src/app/home/_landing-page.scss
@@ -82,6 +82,7 @@
 
 .project-col {
   display: flex;
+  padding-bottom: 2rem;
 }
 
 .subheading-text {
